--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,7 +1,22 @@
 ---
-import Layout from "../layouts/Layout.astro";
+import Layout from "@/layouts/Layout.astro";
+import { ROUTES } from "@/lib/constants.ts";
 ---
 
 <Layout title="Welcome to Astro.">
-  <h1>Hello, world!</h1>
+  <main class="grid min-h-dvh place-items-center">
+    <header>
+      <h1 class="text-5xl">Coming soon... 🤩</h1>
+      <nav class="mt-10 flex flex-col gap-2 md:flex-row">
+        <a
+          class="block w-fit rounded bg-black px-4 py-2 text-lg text-white transition-colors hover:bg-black/80"
+          href={ROUTES.HIGHER_EDUCTACION}>Back to Higher Education</a
+        >
+        <a
+          class="block w-fit rounded border px-4 py-2 text-lg transition-colors hover:bg-slate-200/40"
+          href={ROUTES.WEARETOP}>Go to WeAreTop</a
+        >
+      </nav>
+    </header>
+  </main>
 </Layout>
