chore(ui): reduce show burger to lg screen

--- a/src/components/burger.astro
+++ b/src/components/burger.astro
@@ -1,4 +1,4 @@
-<label class="hamburger md:hidden">
+<label class="hamburger lg:hidden">
   <input type="checkbox" class="check-hamburger" />
   <svg viewBox="0 0 32 32">
     <path
