--- a/src/components/nav-mobile.astro
+++ b/src/components/nav-mobile.astro
@@ -5,7 +5,7 @@ import { formatText, hasSubMenus } from "@/utils/nav";
 ---
 
 <div
-  class="fixed bottom-0 left-0 right-28 top-16 -translate-x-full transform bg-black transition-transform duration-150"
+  class="fixed bottom-0 left-0 right-28 top-16 z-50 -translate-x-full transform bg-black transition-transform duration-150"
   id="nav-mobile"
 >
   <nav class="relative flex flex-col text-[10px]" id="mobile-nav">
