--- a/src/components/top-bar.astro
+++ b/src/components/top-bar.astro
@@ -5,15 +5,15 @@ import NavDesktop from "@/components/nav-desktop.astro";
 import NavMobile from "@/components/nav-mobile.astro";
 ---
 
-<header class="bg-black text-white">
+<header class="z-50 bg-black text-white">
   <div class="container flex min-h-16 items-center justify-between">
     <Burger />
 
-    <a href="/" class="order-last w-fit md:order-none">
+    <a href="/" class="order-last w-fit lg:order-none">
       <img
         src={Logo.src}
         alt="We Are Top"
-        class="aspect-video h-10 w-auto md:h-16"
+        class="aspect-video h-10 w-auto lg:h-16"
       />
     </a>
 
