--- a/src/pages/higher-education.astro
+++ b/src/pages/higher-education.astro
@@ -1,8 +1,10 @@
 ---
 import Layout from "@/layouts/Layout.astro";
 import TopBar from "@/components/top-bar.astro";
+import Hero from "@/components/higher-education/hero.astro";
 ---
 
 <Layout title="Welcome to Astro.">
   <TopBar />
+  <Hero />
 </Layout>
