--- a/src/components/higher-education/hero.astro
+++ b/src/components/higher-education/hero.astro
@@ -6,7 +6,7 @@ import { Icon } from "astro-icon/components";
   class="relative bg-hero-img bg-cover bg-center bg-no-repeat after:dotted-overlay before:absolute before:inset-0 before:bg-cpurple-200/40 after:absolute after:inset-0"
 >
   <div
-    class="container grid min-h-[calc(100dvh-64px)] place-items-center md:min-h-[calc(100dvh-95px)]"
+    class="container relative grid min-h-[calc(100dvh-64px)] place-items-center md:min-h-[calc(100dvh-95px)]"
   >
     <div class="z-10 flex flex-col gap-y-4">
       <Icon name="logos/wearetop-w" class="h-36 w-auto lg:h-48" />
@@ -18,9 +18,9 @@ import { Icon } from "astro-icon/components";
     <a
       role="button"
       href="#"
-      class="absolute bottom-5 z-10 block rotate-90 animate-pulse text-white"
+      class="absolute inset-x-0 bottom-5 z-10 mx-auto inline-block w-fit animate-pulse text-white"
     >
-      <Icon name="navbar/chevron" class="size-10" />
+      <Icon name="navbar/chevron" class="size-10 rotate-90" />
     </a>
   </div>
 </main>
