--- a/src/pages/higher-education.astro
+++ b/src/pages/higher-education.astro
@@ -2,9 +2,11 @@
 import Layout from "@/layouts/Layout.astro";
 import TopBar from "@/components/top-bar.astro";
 import Hero from "@/components/higher-education/hero.astro";
+import Info from "@/components/higher-education/info.astro";
 ---
 
 <Layout title="Welcome to Astro.">
   <TopBar />
   <Hero />
+  <Info />
 </Layout>
