feat(section): add countdown section

--- a/src/pages/higher-education.astro
+++ b/src/pages/higher-education.astro
@@ -3,10 +3,12 @@ import Layout from "@/layouts/Layout.astro";
 import TopBar from "@/components/top-bar.astro";
 import Hero from "@/components/higher-education/hero.astro";
 import Info from "@/components/higher-education/info.astro";
+import CountDown from "@/components/higher-education/countdown.astro";
 ---
 
 <Layout title="Welcome to Astro.">
   <TopBar />
   <Hero />
   <Info />
+  <CountDown />
 </Layout>
