chore(accessibility): add missing aria labels

--- a/src/components/higher-education/hero.astro
+++ b/src/components/higher-education/hero.astro
@@ -19,6 +19,7 @@ import { Icon } from "astro-icon/components";
       role="button"
       href="#info"
       class="absolute inset-x-0 bottom-5 z-10 mx-auto inline-block w-fit animate-pulse text-white"
+      aria-label="Scroll down"
     >
       <Icon name="navbar/chevron" class="size-10 rotate-90" />
     </a>
