chore(const): update external routes and add base url

--- a/src/components/nav-mobile.astro
+++ b/src/components/nav-mobile.astro
@@ -47,7 +47,7 @@ import { formatText, hasSubMenus } from "@/utils/nav";
                       {Object.entries(subValue).map(
                         ([subSubKey, subSubValue]) => (
                           <a
-                            href={subSubValue as string}
+                            href={(ROUTES.WEARETOP + subSubValue) as string}
                             class="block border-t border-cmutted-foreground/30 px-4 py-3 font-semibold text-cmutted-foreground transition-colors hover:text-white"
                             aria-label={formatText(subSubKey)}
                           >
@@ -59,7 +59,7 @@ import { formatText, hasSubMenus } from "@/utils/nav";
                   </div>
                 ) : (
                   <a
-                    href={subValue as string}
+                    href={(ROUTES.WEARETOP + subValue) as string}
                     class="block px-4 py-3 font-semibold hover:text-czyan"
                     aria-label={formatText(subValue)}
                   >
@@ -72,7 +72,7 @@ import { formatText, hasSubMenus } from "@/utils/nav";
         ) : (
           // Normal items
           <a
-            href={value as string}
+            href={(ROUTES.WEARETOP + value) as string}
             class="after-star flex items-center px-4 py-4 transition-colors last-of-type:relative last-of-type:bg-cpurple-100 hover:bg-cpurple-200 [&:first-of-type>svg]:skew-x-[-18deg]"
             aria-label={formatText(value as string)}
           >
