feat(section): add bento section

--- a/src/components/higher-education/info.astro
+++ b/src/components/higher-education/info.astro
@@ -1,4 +1,4 @@
-<section class="bg-czyan" id="info">
+<section class="bg-czyan">
   <article class="container py-10 text-center">
     <h2 class="heading-2 mb-4 text-balance font-medium text-cpurple">
       Becas CAD 11.500 Diplomas y
