--- a/src/pages/higher-education.astro
+++ b/src/pages/higher-education.astro
@@ -4,11 +4,13 @@ import TopBar from "@/components/top-bar.astro";
 import Hero from "@/components/higher-education/hero.astro";
 import Info from "@/components/higher-education/info.astro";
 import CountDown from "@/components/higher-education/countdown.astro";
+import Bento from "@/components/higher-education/bento.astro";
 ---
 
 <Layout title="Welcome to Astro.">
   <TopBar />
   <Hero />
+  <Bento />
   <Info />
   <CountDown />
 </Layout>
