--- a/src/components/higher-education/hero.astro
+++ b/src/components/higher-education/hero.astro
@@ -17,7 +17,7 @@ import { Icon } from "astro-icon/components";
 
     <a
       role="button"
-      href="#info"
+      href="#bento"
       class="absolute inset-x-0 bottom-5 z-10 mx-auto inline-block w-fit animate-pulse text-white"
       aria-label="Scroll down"
     >
