--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -1,5 +1,7 @@
 ---
 import "@fontsource/lato";
+import TopBar from "@/components/top-bar.astro";
+import Footer from "@/components/footer.astro";
 
 interface Props {
   title: string;
@@ -17,7 +19,9 @@ const { title } = Astro.props;
     <title>{title}</title>
   </head>
   <body>
+    <TopBar />
     <slot />
+    <Footer />
   </body>
 </html>
 
