feat: add scroll animation driven

--- a/src/pages/higher-education.astro
+++ b/src/pages/higher-education.astro
@@ -4,10 +4,12 @@ import Hero from "@/components/higher-education/hero.astro";
 import Info from "@/components/higher-education/info.astro";
 import CountDown from "@/components/higher-education/countdown.astro";
 import Bento from "@/components/higher-education/bento.astro";
+import ScrollDrivenAnimation from "@/components/higher-education/scroll-driven-animation.astro";
 ---
 
 <Layout title="Welcome to Astro.">
-  <Hero />
+  <!-- <Hero /> -->
+  <ScrollDrivenAnimation />
   <Bento />
   <Info />
   <CountDown />
