--- a/src/components/top-bar.astro
+++ b/src/components/top-bar.astro
@@ -5,7 +5,7 @@ import NavDesktop from "@/components/nav-desktop.astro";
 import NavMobile from "@/components/nav-mobile.astro";
 ---
 
-<header class="z-50 bg-black text-white">
+<header class="sticky inset-0 z-50 bg-black text-white">
   <div class="container flex min-h-16 items-center justify-between">
     <Burger />
 
