chore: add real data

--- a/src/components/higher-education/bento.astro
+++ b/src/components/higher-education/bento.astro
@@ -47,7 +47,8 @@ import Globe from "./globe.astro";
                 src="/videos/1.mp4"
                 autoplay
                 loop
-                muted></video>
+                muted
+                playsinline></video>
             </div>
           </div>
         </div>
@@ -148,7 +149,10 @@ import Globe from "./globe.astro";
               <video
                 class="size-full object-cover object-top"
                 src="/videos/2.mp4"
-                controls></video>
+                controls
+                muted
+                poster="https://www.wearetop.co/wp-content/uploads/2019/05/Colombia-Cover.jpg"
+              ></video>
             </div>
           </div>
         </div>
