--- a/src/components/higher-education/info.astro
+++ b/src/components/higher-education/info.astro
@@ -1,16 +1,21 @@
 <section class="bg-czyan">
-  <article class="container py-10 text-center">
-    <h2 class="heading-2 mb-4 text-balance font-medium text-cpurple">
-      Becas CAD 11.500 Diplomas y
+  <article class="container flex flex-col gap-y-6 py-20 text-center">
+    <h2
+      class="big-heading mx-auto text-balance font-black leading-none text-white"
+    >
+      With ICMS, you will have the opportunity to complete a Professional
+      Placement.
     </h2>
-    <p class="mx-auto max-w-prose text-left leading-normal lg:text-lg">
-      Lorem ipsum dolor sit amet consectetur, adipisicing elit. Voluptatem
-      ducimus recusandae non nihil, nobis ex aliquid quod architecto.
-      Praesentium similique aspernatur perspiciatis, iusto amet in tenetur
-      provident, a molestias velit exercitationem ex nulla quas deserunt
-      consectetur labore repellat obcaecati corrupti earum illo. Consectetur
-      soluta fuga delectus minima illo, dignissimos quasi, incidunt molestias
-      numquam et unde.
+
+    <p
+      class="heading-3 mx-auto max-w-prose text-center font-medium leading-none text-cpurple"
+    >
+      ¡A secure individually Tailored Internship!
     </p>
+
+    <button
+      class="mx-auto w-fit appearance-none border-none bg-cpurple-100 px-4 py-2 text-white shadow shadow-cpurple-100 outline-none transition-colors hover:bg-cpurple-200"
+      >Apply now!</button
+    >
   </article>
 </section>
