feat(pricing): add pricing section

--- a/src/pages/higher-education.astro
+++ b/src/pages/higher-education.astro
@@ -4,10 +4,12 @@ import Info from "@/components/higher-education/info.astro";
 import CountDown from "@/components/higher-education/countdown.astro";
 import Bento from "@/components/higher-education/bento.astro";
 import ScrollDrivenAnimation from "@/components/higher-education/scroll-driven-animation.astro";
+import Pricing from "@/components/higher-education/pricing.astro";
 ---
 
 <Layout title="Welcome to Astro.">
   <ScrollDrivenAnimation />
+  <Pricing />
   <Bento />
   <Info />
   <CountDown />
