--- a/src/components/higher-education/pricing.astro
+++ b/src/components/higher-education/pricing.astro
@@ -34,7 +34,7 @@ const PLANS = [
 ];
 ---
 
-<section class="grid place-items-center bg-gray-50 pt-32">
+<section class="grid place-items-center bg-gray-50 pt-32" id="pricing">
   <div class="flex flex-col gap-20">
     <header class="flex flex-col gap-5 text-center">
       <h2 class="heading-1 font-black">Make your spend, well-spent</h2>
