chore(ui): add latest changes

--- a/src/components/higher-education/bento.astro
+++ b/src/components/higher-education/bento.astro
@@ -4,20 +4,12 @@ import Globe from "./globe.astro";
 
 <section class="bg-gray-50 py-24 sm:py-32" id="bento">
   <div class="mx-auto max-w-2xl px-6 lg:max-w-7xl lg:px-8">
-    <h2 class="text-center text-base/7 font-semibold text-cpurple">
-      Tu futuro comienza aquí
-    </h2>
     <p
-      class="mx-auto mt-2 max-w-lg text-balance text-center text-4xl font-semibold tracking-tight text-gray-950 sm:text-5xl"
+      class="mx-auto mt-2 text-balance text-center text-4xl font-semibold tracking-tight text-gray-950 sm:text-5xl"
     >
-      Your journey to Happiness, begins Here!
+      Empowering Your Sucsess
     </p>
-    <p
-      class="mx-auto mt-2 max-w-lg text-balance text-center tracking-tight text-gray-950"
-    >
-      Aprende un idioma o estudia lo que más te gusta, mientras vives la mejor
-      experiencia de tu vida.
-    </p>
+
     <div class="mt-10 grid gap-4 sm:mt-16 lg:grid-cols-3 lg:grid-rows-2">
       <div class="relative lg:row-span-2">
         <div class="absolute inset-px rounded-lg bg-white lg:rounded-l-[2rem]">
@@ -29,11 +21,13 @@ import Globe from "./globe.astro";
             <p
               class="mt-2 text-lg font-medium tracking-tight text-gray-950 max-lg:text-center"
             >
-              +20 Idiomas
+              MBA
             </p>
             <p class="mt-2 max-w-lg text-sm/6 text-gray-600 max-lg:text-center">
-              Aprende o perfecciona el idioma que desees en las mejores escuelas
-              internacionales.
+              You will have the opportunity to complete an Action Learning
+              Project and a Professional Placement in an Australian or
+              international business within your two Work Integrated Learning
+              (WIL) subjects, included within the degree.
             </p>
           </div>
           <div
@@ -69,11 +63,13 @@ import Globe from "./globe.astro";
             <p
               class="mt-2 text-lg font-medium tracking-tight text-gray-950 max-lg:text-center"
             >
-              Programas y Destinos
+              MIT
             </p>
             <p class="mt-2 max-w-lg text-sm/6 text-gray-600 max-lg:text-center">
-              +100 destinos y culturas para elegir. High School, Pregrados,
-              Maestrías y Summer Camps.
+              The MIT could open up a range of career opportunities for
+              graduates within the systems, networks and database sectors that
+              are currently identified as ‘strategic skills’ by the Australian
+              Government.
             </p>
           </div>
 
@@ -97,11 +93,15 @@ import Globe from "./globe.astro";
             <p
               class="mt-2 text-lg font-medium tracking-tight text-gray-950 max-lg:text-center"
             >
-              Las Mejores Escuelas
+              MMTH
             </p>
             <p class="mt-2 max-w-lg text-sm/6 text-gray-600 max-lg:text-center">
-              Contamos con más de 20 convenios internacionales y las mejores
-              instalaciones.
+              Graduates of the Master of Management (Tourism and Hospitality)
+              will be positioned to take advantage of new opportunities in the
+              rapidly expanding services industry, including government
+              agencies, hospitality and entertainment services, retail travel,
+              theme parks and attractions, tourism authorities, cruise
+              companies, airlines and integrated resorts.
             </p>
           </div>
 
@@ -133,12 +133,17 @@ import Globe from "./globe.astro";
             <p
               class="mt-2 text-lg font-medium tracking-tight text-gray-950 max-lg:text-center"
             >
-              Testimonios
+              Requirements
             </p>
-            <p class="mt-2 max-w-lg text-sm/6 text-gray-600 max-lg:text-center">
-              Conoce las experiencias de nuestros estudiantes alrededor del
-              mundo.
-            </p>
+            <ul
+              class="ml-5 mt-2 flex max-w-lg list-disc flex-col text-sm/6 text-gray-600 max-lg:text-center"
+            >
+              <li>
+                Succesfull completion of a bachelor's degree or postgrdauate
+                program, GPA 3.0 (on a 5 point scale)
+              </li>
+              <li>English proficiency: 6.5 overall eq. IELTS</li>
+            </ul>
           </div>
           <div
             class="relative min-h-[30rem] w-full grow [container-type:inline-size] max-lg:mx-auto max-lg:max-w-sm"
