--- a/src/components/higher-education/info.astro
+++ b/src/components/higher-education/info.astro
@@ -8,13 +8,13 @@
     </h2>
 
     <p
-      class="heading-3 mx-auto max-w-prose text-center font-medium leading-none text-cpurple"
+      class="big-heading mx-auto text-balance font-black leading-none text-cpurple"
     >
       ¡A secure individually Tailored Internship!
     </p>
 
     <button
-      class="mx-auto w-fit appearance-none border-none bg-cpurple-100 px-4 py-2 text-white shadow shadow-cpurple-100 outline-none transition-colors hover:bg-cpurple-200"
+      class="mx-auto w-fit appearance-none border-none bg-cpurple-100 px-4 py-2 text-white shadow shadow-cpurple-100 outline-none transition-colors hover:bg-cpurple-200 lg:mt-10"
       >Apply now!</button
     >
   </article>
