--- a/src/pages/higher-education.astro
+++ b/src/pages/higher-education.astro
@@ -1,5 +1,6 @@
 ---
 import Layout from "@/layouts/Layout.astro";
+import Hero from "@/components/higher-education/hero.astro";
 import Info from "@/components/higher-education/info.astro";
 import CountDown from "@/components/higher-education/countdown.astro";
 import Bento from "@/components/higher-education/bento.astro";
@@ -8,6 +9,7 @@ import Pricing from "@/components/higher-education/pricing.astro";
 ---
 
 <Layout title="Welcome to Astro.">
+  <Hero />
   <ScrollDrivenAnimation />
   <Pricing />
   <Bento />
