--- a/src/components/higher-education/bento.astro
+++ b/src/components/higher-education/bento.astro
@@ -2,7 +2,7 @@
 import Globe from "./globe.astro";
 ---
 
-<section class="bg-gray-50 py-24 sm:py-32" id="bento">
+<section class="bg-gray-50 py-10 lg:py-32" id="bento">
   <div class="mx-auto max-w-2xl px-6 lg:max-w-7xl lg:px-8">
     <p
       class="mx-auto mt-2 text-balance text-center text-4xl font-semibold tracking-tight text-gray-950 sm:text-5xl"
@@ -136,7 +136,7 @@ import Globe from "./globe.astro";
               Requirements
             </p>
             <ul
-              class="ml-5 mt-2 flex max-w-lg list-disc flex-col text-sm/6 text-gray-600 max-lg:text-center"
+              class="ml-5 mt-2 flex max-w-lg list-disc flex-col text-sm/6 text-gray-600"
             >
               <li>
                 Succesfull completion of a bachelor's degree or postgrdauate
