--- a/src/components/higher-education/pricing.astro
+++ b/src/components/higher-education/pricing.astro
@@ -34,13 +34,12 @@ const PLANS = [
 ];
 ---
 
-<section
-  class="relative grid place-items-center bg-gray-50 pt-24 sm:pt-32"
-  id="pricing"
->
+<section class="relative grid place-items-center bg-gray-50 pt-10" id="pricing">
   <div class="flex flex-col gap-20">
     <header class="flex flex-col gap-5 text-center">
-      <h2 class="heading-1 font-black">Make your investment, well-invested</h2>
+      <h2 class="heading-1 text-pretty font-black">
+        Make your investment, well-invested
+      </h2>
       <p class="mx-auto max-w-prose">
         The International College of Management, Sydney (ICMS) is a leader in
         career-focused education that offers a wide range of undergraduate and
