--- a/src/components/higher-education/hero.astro
+++ b/src/components/higher-education/hero.astro
@@ -11,8 +11,7 @@ import { Icon } from "astro-icon/components";
     playsinline
     muted
     loop
-    autoplay
-    poster="/images/logo-black.webp"></video>
+    autoplay></video>
 
   <a
     role="button"
